Use a tmp directory for the tycho p2 stuff.